--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-router-dom": "^6.25.1",
     "recharts": "^2.12.7",
     "sass": "^1.77.8",
     "scss": "^0.2.4",
